// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render the home component 1`] = `
<div
  className="body"
>
  <div
    id="notificationContainer"
  />
  <div
    className="textBackground"
  >
    <div
      className="title"
    >
      The Quiz App
    </div>
  </div>
</div>
`;

exports[`Home should render the home component and a notification 1`] = `
<div
  className="body"
>
  <div
    id="notificationContainer"
  >
    <div
      className="spacing success"
      id="notification"
    >
      Test
    </div>
  </div>
  <div
    className="textBackground"
  >
    <div
      className="title"
    >
      The Quiz App
    </div>
  </div>
</div>
`;
